Stop theater mode button from getting squashed in small windows.

--- a/css/core.css
+++ b/css/core.css
@@ -2209,6 +2209,7 @@ div:has(>._1m8iQOSVziKDHiInrfskv_) {
 }
 
 #toggleTheaterMode {
+  min-width: var(--zehn-nav-button-width);
   width: var(--zehn-nav-button-width);
   height: var(--zehn-nav-height);
   line-height: var(--zehn-nav-height);
